<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/un"
        android:textSize="30sp"
        tools:text="@string/un" />

    <EditText
        android:id="@+id/editTextun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:hint="@string/un"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonsrchup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/upsearch" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/pw"
        android:textSize="30sp"
        tools:text="@string/pw" />

    <EditText
        android:id="@+id/editTextpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonslct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/slctall" />

    <Button
        android:id="@+id/buttonadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/Add" />

    <Button
        android:id="@+id/buttonsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/signin" />

    <Button
        android:id="@+id/buttondelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/buttonupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/update" />
</LinearLayout>